projetos/local/nexus-msg/nexus-msg-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-msg-api-deployment
spec:
  template:
    spec:
      containers:
      - name: nexus-msg-api-container
        image: nexus-msg-api:latest
        imagePullPolicy: IfNotPresent
